--- a/springboot-01-cache/src/main/resources/application.properties
+++ b/springboot-01-cache/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
 #开启日志,只要是运行mapper下的方法，控制台都会输出日志文件
 logging.level.com.atguigu.cache.mapper=debug
+#打开自动配置的报告，运行时会打印日志信息
+#debug=true
+
+#配置Redis的主机地址
+spring.redis.host=192.168.137.4
